# nRF5-SDK-for-Mesh

./: CMakeLists.txt  COPYING.md  LICENSE_NOTE.md  MIGRATION_GUIDE.md  README.md  RELEASE_NOTES.md  gtags.conf
examples/: CMakeLists.txt  README.md  experimental_examples.md  nrf_mesh_sdk.c  nrf_mesh_sdk.h  nrf_mesh_weak.c
examples/beaconing/: CMakeLists.txt  README.md  beaconing_nrf51422_xxAC_s130_2_0_1.emProject  beaconing_nrf52832_xxAA_s132_3_1_0.emProject  beaconing_nrf52832_xxAA_s132_5_0_0.emProject  beaconing_nrf52832_xxAA_s132_6_0_0.emProject  beaconing_nrf52832_xxAA_s132_6_0_0.emSession  beaconing_nrf52832_xxAA_s132_6_1_1.emProject  beaconing_nrf52840_xxAA_s140_5_0_0-3_alpha.emProject  beaconing_nrf52840_xxAA_s140_6_0_0.emProject  beaconing_nrf52840_xxAA_s140_6_1_1.emProject
examples/beaconing/include/: app_config.h  nrf_mesh_config_app.h  sdk_config.h
examples/beaconing/linker/: nrf51422_xxAC_s110_8.0.0.sct  nrf52810_xxAA_s112_7.0.1.ld  nrf52832_xxAA_s113_7.0.0.sct  nrf52832_xxAA_s132_6.0.0.ld  nrf52840_xxAA_s140_6.0.0.ld  nrf52840_xxAA_s140_6.0.0.sct  nrf52840_xxAA_s140_6.1.1.ld
examples/beaconing/src/: main.c
examples/common/: CMakeLists.txt  README.md
examples/common/include/: app_dtt.h  app_level.h  app_light_ctl.h  app_light_lc.h  app_light_lightness.h  app_onoff.h  app_scene.h  app_sensor.h  app_sensor_utils.h  app_transition.h  ble_dfu_support.h  ble_softdevice_support.h  example_common.h  mesh_app_utils.h  mesh_provisionee.h  mesh_softdevice_init.h  nrf_mesh_config_examples.h  pwm_utils.h  rtt_input.h  simple_hal.h
examples/common/src/: app_dtt.c  app_error_weak.c  app_level.c  app_light_ctl.c  app_light_lc.c  app_light_lightness.c  app_onoff.c  app_scene.c  app_sensor.c  app_sensor_utils.c  app_transition.c  assertion_handler_weak.c  ble_dfu_support.c  ble_softdevice_support.c  mesh_adv.c  mesh_app_utils.c  mesh_provisionee.c  mesh_softdevice_init.c  nrf_mesh_weak.c  pwm_utils.c  rtt_input.c  simple_hal.c
examples/dfu/: CMakeLists.txt  README.md  dfu_no_serial_nrf52832_xxAA_s132_6_1_1.emProject  dfu_no_serial_nrf52840_xxAA_s140_6_1_1.emProject  dfu_nrf51422_xxAC_s130_2_0_1.emProject  dfu_nrf52832_xxAA_s132_3_1_0.emProject  dfu_nrf52832_xxAA_s132_5_0_0.emProject  dfu_nrf52832_xxAA_s132_6_0_0.emProject  dfu_nrf52832_xxAA_s132_6_1_1.emProject  dfu_nrf52840_xxAA_s140_5_0_0-3_alpha.emProject  dfu_nrf52840_xxAA_s140_6_0_0.emProject  dfu_nrf52840_xxAA_s140_6_1_1.emProject
examples/dfu/include/: app_config.h  config.h  nrf_drv_config.h  nrf_mesh_config_app.h  sdk_config.h
examples/dfu/linker/: nrf52832_xxAA_s132_5.0.0.ld
examples/dfu/src/: main.c
examples/dimming/: README.md
examples/dimming/dimming_client/: CMakeLists.txt
examples/dimming/dimming_server/: CMakeLists.txt
examples/enocean_switch/: CMakeLists.txt  README.md  enocean_switch_nrf52832_xxAA_s132_6_0_0.emProject  enocean_switch_nrf52832_xxAA_s132_6_1_1.emProject  enocean_switch_nrf52840_xxAA_s140_6_0_0.emProject  enocean_switch_nrf52840_xxAA_s140_6_1_1.emProject
examples/enocean_switch/img/: example_nw_config.xml
examples/enocean_switch/include/: app_config.h  enocean.h  enocean_switch_example.h  flash_helper.h  nrf_mesh_config_app.h  sdk_config.h
examples/enocean_switch/linker/: nrf51422_xxAC_s130_2.0.1.sct  nrf52810_xxAA_s112_6.1.0.ld  nrf52832_xxAA_s132_5.0.0.ld  nrf52832_xxAA_s132_5.0.0.sct  nrf52832_xxAA_s132_6.0.0.ld  nrf52840_xxAA_s140_6.0.0.ld  nrf52840_xxAA_s140_6.1.0.ld  nrf52840_xxAA_s140_7.0.1.sct
examples/enocean_switch/src/: enocean.c  flash_helper.c  main.c
examples/experimental_dimming/: CMakeLists.txt  README.md
examples/experimental_dimming/dimming_client/: CMakeLists.txt  light_switch_dimming_client_nrf52832_xxAA_s132_6_0_0.emProject  light_switch_dimming_client_nrf52832_xxAA_s132_6_1_1.emProject  light_switch_dimming_client_nrf52840_xxAA_s140_6_0_0.emProject  light_switch_dimming_client_nrf52840_xxAA_s140_6_1_1.emProject
examples/experimental_dimming/dimming_server/: CMakeLists.txt  light_switch_dimming_server_nrf52832_xxAA_s132_6_0_0.emProject  light_switch_dimming_server_nrf52832_xxAA_s132_6_1_1.emProject  light_switch_dimming_server_nrf52840_xxAA_s140_6_0_0.emProject  light_switch_dimming_server_nrf52840_xxAA_s140_6_1_1.emProject  (+1 more)
examples/experimental_lpn/: CMakeLists.txt  README.md  dfu_ble.md  lpn_nrf52832_xxAA_s132_6_1_1.emProject  lpn_nrf52840_xxAA_s140_6_1_1.emProject
examples/experimental_lpn/include/: app_config.h  (+2 more)
examples/light_ctl/: CMakeLists.txt  README.md
examples/light_lc/: CMakeLists.txt
examples/light_lightness/: README.md
examples/light_switch/: CMakeLists.txt  README.md
examples/lpn/: CMakeLists.txt  README.md  dfu_ble.md
examples/pb_remote/: README.md
examples/provisioner/: CMakeLists.txt  README.md
examples/scene/: CMakeLists.txt  README.md
examples/sdk_coexist/: README.md
examples/sensor/: README.md
examples/serial/: CMakeLists.txt  README.md  serial_nrf51422_xxAC_s130_2_0_1.emProject  serial_nrf52832_xxAA_s132_3_1_0.emProject  serial_nrf52832_xxAA_s132_5_0_0.emProject  serial_nrf52832_xxAA_s132_6_0_0.emProject  serial_nrf52832_xxAA_s132_6_1_1.emProject  serial_nrf52840_xxAA_s140_5_0_0-3_alpha.emProject  serial_nrf52840_xxAA_s140_6_0_0.emProject  serial_nrf52840_xxAA_s140_6_1_1.emProject
examples/templates/: nrf_mesh_config_app.h
mesh/: CMakeLists.txt
mesh/access/: CMakeLists.txt
mesh/app/: nrf_mesh_config_app.h
mesh/bearer/: CMakeLists.txt
mesh/bootloader/: CMakeLists.txt  README.md
mesh/core/: CMakeLists.txt
mesh/dfu/: CMakeLists.txt
mesh/doc/: access.msc  packet_mgr_commit.graphml  packet_mgr_free_1.graphml  packet_mgr_free_2.graphml  packet_mgr_initial_state.graphml  packet_mgr_pop.graphml  packet_mgr_producer_consumer.graphml  packet_mgr_reserve_1.graphml  packet_mgr_reserve_2.graphml  provisionee_state_diagram.dot  provisioner_state_diagram.dot
mesh/friend/: CMakeLists.txt
mesh/gatt/: CMakeLists.txt
mesh/prov/: CMakeLists.txt
mesh/serial/: CMakeLists.txt
mesh/stack/: CMakeLists.txt
mesh/test/: CMakeLists.txt  cmock_config.yaml.in
models/model_spec/: CMakeLists.txt
(+1237 files in other folders)
